# curricula-variable

./: 3118002296_course.txt  3118002296_student.txt  CMakeLists.txt  Control.cpp  Control.h  Course.cpp  Course.h  CourseData_Struct.h  CourseManagement.cpp  CourseManagement.h  Management.cpp  Management.h  Operator.cpp  Operator.h  README.md  Show.cpp  Show.h  Student.cpp  Student.h  StudentData_Struct.h  StudentManagement.cpp  StudentManagement.h  main.cpp
